# disposition

./: .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  about.hbs  about.toml  deny.toml  rustfmt.toml
app/cli/: Cargo.toml
app/cli/src/: main.rs
app/playground/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
app/playground/assets/: licenses.html  tailwind.css
app/playground/assets/example_diagrams/: 001_simple_nodes.yaml  002_nested_nodes.yaml  003_dependencies.yaml  004_interactions.yaml  004_interactions_and_processes.yaml  005_edge_labels.yaml  005_tags.yaml  006_markdown.yaml  007_images.yaml  007_process_only.yaml  008_class_diagram.yaml  008_tooltips.yaml  009_styling.yaml  010_deployment_process.yaml  010_tags.yaml  011_processes.yaml  012_process_interactions.yaml  013_rank_directions.yaml  014_class_diagram.yaml  015_cloud_architecture.yaml  016_interaction_timing.yaml  018_edge_offsets_and_protrusions.yaml  019_interaction_halo.yaml  020_interaction_halo_with_labels.yaml  022_layout_edges.yaml
app/playground/assets/lsp_worker/: .gitignore  worker_entry.js
app/playground/assets/styling/: main.css
app/playground/src/: clipboard.rs  components.rs  editor_state.rs  example_diagrams.rs  hooks.rs  lsp_server.rs  main.rs  route.rs  undo_history.rs  views.rs
app/playground/src/clipboard/: clipboard_error.rs
app/playground/src/components/: disposition_editor.rs  edge_routing_diagnostics_div.rs  editor.rs  input_diagram_div.rs  ir_diagram_div.rs  svg_elements_div.rs  tab_group.rs  taffy_node_mappings_div.rs
app/playground/src/editor_state/: editor_page.rs  editor_page_edges.rs  editor_page_entity.rs  editor_page_theme.rs  editor_page_thing.rs
app/playground/src/example_diagrams/: 001_simple_nodes.yaml  002_nested_nodes.yaml  006_themed.yaml  (+7 more)
crate/input_ir_model/: Cargo.toml
crate/input_ir_model/src/: api_doc.rs  edge_animation_active.rs  ir_diagram_and_issues.rs  issue.rs  lib.rs
crate/input_ir_rt/: Cargo.toml
crate/input_ir_rt/src/: absolute_coordinates.rs  diagram_generate_error.rs  diagram_generator.rs  divergent_ancestor_ranks_calculator.rs  edge_desc_bg_id_generator.rs  edge_face_assigner.rs  edge_halo_id_generator.rs  edge_halo_outline_id_generator.rs  edge_id_generator.rs  edge_label_bg_id_generator.rs  edge_route_normalizer.rs  entity_highlighted_spans.rs  input_diagram_merger.rs  input_diagram_theme_sources.rs  input_to_ir_diagram_mapper.rs  ir_to_taffy_builder.rs  lib.rs  md_text.rs  node_content_spans_calculator.rs  node_ranks_calculator.rs  process_step_graph_calculator.rs  string_xml_escaper.rs  svg_element_classes.rs  svg_elements_to_svg_mapper.rs  taffy_node_absolute_coordinates_calculator.rs  taffy_to_svg_elements_mapper.rs  taffy_to_svg_mapper.rs  theme_value_source.rs
crate/input_model/: Cargo.toml
crate/input_model/src/: api_doc.rs  diagram_focus.rs  edge.rs  entity.rs  input_diagram.rs  lib.rs  process.rs  tag.rs  theme.rs  thing.rs
crate/input_rt/: Cargo.toml
crate/input_rt/src/: edge_group_card_ops.rs  edge_labels_page_ops.rs  entity_page_ops.rs  entity_types_page_ops.rs  flat_entry.rs  id_parse.rs  id_rename.rs  lib.rs  map_target.rs  on_change_target.rs  process_card_ops.rs  processes_page_ops.rs  step_dependency_card_ops.rs  step_interaction_card_ops.rs  style_aliases_section_ops.rs  tags_page_ops.rs  thing_layout_ops.rs  things_page_ops.rs
crate/ir/: Cargo.toml
crate/ir/src/: api_doc.rs  common.rs  edge.rs  entity.rs  example_ir.yaml  ir_diagram.rs  layout.rs  lib.rs  node.rs
crate/ir_model/: Cargo.toml
crate/ir_model/src/: api_doc.rs  edge.rs  entity.rs  ir_diagram.rs  layout.rs  lib.rs  node.rs  process.rs  shape.rs  thing.rs
crate/lsp/: Cargo.toml
crate/lsp/src/: code_action.rs  completion.rs  language_server.rs  lib.rs  transport.rs
crate/lsp_worker/: Cargo.toml
crate/lsp_worker/src/: lib.rs
crate/model/: Cargo.toml
crate/model/src/: api_doc.rs  common.rs  diagram_spec.rs  edge.rs  entity.rs  entity_type.rs  example_input.yaml  group.rs  input_diagram.rs  lib.rs  process.rs  tag.rs  theme.rs  thing.rs
crate/model_common/: Cargo.toml
crate/model_common/src/: edge.rs  entity.rs  id.rs  layout.rs  lib.rs  map.rs  rank_dir.rs  render_options.rs  set.rs  theme.rs  thing.rs
crate/output_model/: Cargo.toml
crate/output_model/src/: diagram_focus_generated.rs  diagram_generated.rs  lib.rs
crate/svg_model/: Cargo.toml
crate/svg_model/src/: api_doc.rs  edge_path_bounds.rs  edge_path_midpoint.rs  edge_routing_diagnostic.rs  edge_routing_diagnostics.rs  lib.rs  ortho_protrusion_params.rs  rank_gap_diagnostic_endpoint_kind.rs  rank_gap_diagnostic_side.rs  rank_gap_entry_diagnostic.rs  spacer_protrusion_params.rs  svg_edge_description_info.rs  svg_edge_info.rs  svg_edge_label_info.rs  svg_elements.rs  svg_image_span.rs  svg_md_style.rs  svg_node_info.rs  svg_node_info_circle.rs  svg_process_info.rs  svg_text_span.rs
crate/taffy_model/: Cargo.toml
crate/taffy_model/src/: api_doc.rs  cosmic_text_context.rs  diagram_lod.rs  diagram_node_ctx.rs  dimension.rs  dimension_and_lod.rs  edge_description_ctx.rs  edge_description_taffy_nodes.rs  edge_id_to_edge_description_taffy_nodes.rs  edge_id_to_edge_label_taffy_node_ids.rs  edge_id_to_edge_spacer_taffy_nodes.rs  edge_id_to_highlighted_spans.rs  edge_id_to_image_spans.rs  edge_label_ctx.rs  edge_label_taffy_node_ids.rs  edge_spacer_ctx.rs  edge_spacer_taffy_nodes.rs  entity_highlighted_span.rs  entity_highlighted_spans.rs  error.rs  ir_node_taffy_node_ids.rs  lib.rs  md_block_taffy_ids.rs  md_colors.rs  md_heading_level.rs  md_image_ctx.rs  md_image_span.rs  md_node_taffy_ids.rs  md_style.rs  md_token_ctx.rs  node_context.rs  node_id_to_envelope_taffy_node.rs  node_id_to_image_spans.rs  node_id_to_md_node_taffy_ids.rs  node_id_to_taffy_node_ids.rs  node_inbuilt_to_taffy_node.rs  node_to_taffy_node_ids.rs  processes_included.rs  taffy_node_ctx.rs  taffy_node_kind.rs  (+5 more)
examples/json_schema/: Cargo.toml
examples/openapi_spec/: Cargo.toml
examples/openapi_spec/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+515 files in other folders)
