[workspace.package]
version = "0.0.1"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2024"
homepage = "https://azriel.im/disposition"
repository = "https://github.com/azriel91/disposition"
readme = "README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crate/*",
    "examples/*",
    "workspace_tests",
]
resolver = "2"

[package]
name = "disposition"
description = "SVG diagram generator"
documentation = "https://docs.rs/disposition/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = true
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
disposition_input_ir_model = { workspace = true }
disposition_input_model = { workspace = true }
disposition_ir_model = { workspace = true }
disposition_model_common = { workspace = true }

[features]
default = []
openapi = [
    "disposition_input_ir_model/openapi",
    "disposition_input_model/openapi",
    "disposition_ir_model/openapi",
]
test = [
    "disposition_input_model/test",
    "disposition_input_ir_model/test",
    "disposition_ir_model/test",
    "disposition_model_common/test",
]

[workspace.dependencies]
# disposition crates
disposition = { path = ".", version = "0.0.1" }
disposition_input_ir_model = { path = "crate/input_ir_model", version = "0.0.1" }
disposition_input_ir_rt = { path = "crate/input_ir_rt", version = "0.0.1" }
disposition_input_model = { path = "crate/input_model", version = "0.0.1" }
disposition_ir_model = { path = "crate/ir_model", version = "0.0.1" }
disposition_model_common = { path = "crate/model_common", version = "0.0.1" }
disposition_taffy_model = { path = "crate/taffy_model", version = "0.0.1" }

# external crates
id_newtype = "0.2.0"
indexmap = "2.12.0"
miette = "7.6.0"
pretty_assertions = "1.4.1"
serde = "1.0"
serde-saphyr = "0.0.10"
taffy = "0.9.2"
thiserror = "2.0.17"
utoipa = "5.4"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }
