[workspace.package]
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2024"
homepage = "https://azriel.im/disposition"
repository = "https://github.com/azriel91/disposition"
readme = "README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "app/*",
    "crate/*",
    "examples/*",
    "workspace_tests",
]
resolver = "2"

[package]
name = "disposition"
description = "SVG diagram generator"
documentation = "https://docs.rs/disposition/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = true
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
disposition_input_ir_model = { workspace = true }
disposition_input_ir_rt = { workspace = true }
disposition_input_model = { workspace = true }
disposition_input_rt = { workspace = true }
disposition_ir_model = { workspace = true }
disposition_model_common = { workspace = true }
disposition_svg_model = { workspace = true }
disposition_taffy_model = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
default = []
schemars = [
    "dep:schemars",
    "disposition_input_ir_model/schemars",
    "disposition_input_model/schemars",
    "disposition_ir_model/schemars",
    "disposition_svg_model/schemars",
]
test = [
    "disposition_input_model/test",
    "disposition_input_ir_model/test",
    "disposition_ir_model/test",
    "disposition_model_common/test",
    "disposition_svg_model/test",
]

[workspace.dependencies]
# disposition crates
disposition = { path = ".", version = "0.1.0" }
disposition_input_ir_model = { path = "crate/input_ir_model", version = "0.1.0" }
disposition_input_ir_rt = { path = "crate/input_ir_rt", version = "0.1.0" }
disposition_input_model = { path = "crate/input_model", version = "0.1.0" }
disposition_input_rt = { path = "crate/input_rt", version = "0.1.0" }
disposition_ir_model = { path = "crate/ir_model", version = "0.1.0" }
disposition_model_common = { path = "crate/model_common", version = "0.1.0" }
disposition_svg_model = { path = "crate/svg_model", version = "0.1.0" }
disposition_taffy_model = { path = "crate/taffy_model", version = "0.1.0" }

# external crates
base64 = "0.22.1"
dioxus = "0.7.4"
dioxus-clipboard = "0.3.0"
emojis = "0.8.0"
encre-css = "0.20.1"
enum-iterator = "2.3.0"
getrandom = "0.4.2"
gloo-timers = "0.4.0"
id_newtype = "0.3.0"
indexmap = "2.14.0"
kurbo = "0.13.0"
miette = "7.6.0"
ordermap = "1.1.0"
pretty_assertions = "1.4.1"
schemars = "1.2.1"
serde = "1.0"
serde_json = "1.0"
serde-saphyr = "0.0.23"
taffy = "0.10.0"
thiserror = "2.0.18"
typed-builder = "0.23.2"
unicode-segmentation = "1.13.2"
urlencoding = "2.1.3"
web-time = "1.1.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[patch.crates-io]
dioxus-clipboard = { git = "https://github.com/Himmelschmidt/dioxus-clipboard.git", branch = "feat/wasm-clipboard-support" }
