[package]
name = "disposition_playground"
description = "Playground application for the disposition diagramming tool."
documentation = "https://docs.rs/disposition_playground/"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
disposition = { workspace = true }
disposition_input_ir_rt = { workspace = true }
serde-saphyr = { workspace = true }
urlencoding = { workspace = true }

[target.'wasm32-unknown-unknown'.dependencies]
# needed to enable `"wasm_js"` feature, transitive dep of `serde-saphyr`, `reqwest`, et. al.
getrandom = { workspace = true, features = ["wasm_js"] }
web-time = { workspace = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server"]
