[package]
name = "disposition_playground"
description = "Playground application for the disposition diagramming tool."
documentation = "https://docs.rs/disposition_playground/"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-clipboard = { workspace = true, features = ["wasm", "async"] }
dioxus_codemirror = { path = "../../../dioxus_codemirror/dioxus_codemirror" }
disposition = { workspace = true }
disposition_input_ir_rt = { workspace = true }
disposition_input_rt = { workspace = true }
disposition_lsp = { workspace = true }
enum-iterator = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-saphyr = { workspace = true }
urlencoding = { workspace = true }

# Only used by the `lsp-worker` host to spawn / talk to the Web Worker.
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "MessageEvent",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }

# We only support the web target, and we don't need tokio on the server.
#
# ```toml
# [target.'cfg(not(target_family = "wasm"))'.dependencies]
# tokio = { workspace = true, features = ["time"] }
# ```

[target.'cfg(target_family = "wasm")'.dependencies]
# needed to enable `"wasm_js"` feature, transitive dep of `serde-saphyr`, `reqwest`, et. al.
getrandom = { workspace = true, features = ["wasm_js"] }
# Used to fetch the example diagram YAML files served as static assets.
gloo-net = { workspace = true, features = ["http"] }
gloo-timers = { workspace = true, features = ["futures"] }
web-time = { workspace = true }

[features]
default = ["web"]
# Run the LSP server in a dedicated Web Worker instead of in-page on the main
# thread. Requires building the worker wasm first:
# `cargo run -p xtask -- build-worker`.
lsp-worker = ["dep:wasm-bindgen", "dep:web-sys"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server"]
