[package]
name = "disposition_input_ir_model"
description = "`disposition` diagram generator input to IR mapping data types."
documentation = "https://docs.rs/disposition_input_ir_model/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[lints]
workspace = true

[dependencies]
disposition_ir_model = { workspace = true }
disposition_model_common = { workspace = true }
miette = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[features]
default = []

# Only enable this when you need to generate the JSON schema.
schemars = ["dep:schemars", "disposition_model_common/schemars"]

test = []
