[package]
name = "disposition_input_model"
description = "SVG diagram generator input data model."
documentation = "https://docs.rs/disposition_input_model/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[lints]
workspace = true

[dependencies]
disposition_model_common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, optional = true }

[features]
default = []

# Only enable this when you need to generate OpenAPI documentation.
openapi = ["dep:utoipa", "disposition_model_common/openapi"]

test = []
