[package]
name = "disposition_ir_model"
description = "SVG diagram generator intermediate representation."
documentation = "https://docs.rs/disposition_ir_model/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[lints]
workspace = true

[dependencies]
disposition_model_common = { workspace = true }
enum-iterator = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
taffy = { workspace = true }

[features]
default = []

# Only enable this when you need to generate the JSON schema.
schemars = ["dep:schemars", "disposition_model_common/schemars"]

test = []
