[package]
name = "disposition_lsp_worker"
description = "Web Worker host for the `disposition` LSP server (wasm-bindgen)."
documentation = "https://docs.rs/disposition_lsp_worker/"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

# Built to wasm and run inside a dedicated Web Worker. Bundled with
# `wasm-bindgen --target web` via `cargo run -p xtask -- build-worker`.
[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[lints]
workspace = true

[dependencies]
disposition_lsp = { workspace = true }
futures = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["DedicatedWorkerGlobalScope", "MessageEvent"] }
