[package]
name = "disposition_model_common"
description = "SVG diagram generator common data model types."
documentation = "https://docs.rs/disposition_model_common/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
id_newtype = { workspace = true, features = ["macros"] }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, optional = true }

[features]
default = []

# Only enable this when you need to generate OpenAPI documentation.
openapi = ["dep:utoipa"]

# Flag so that running tests with `--all-features` still selects `indexmap` for deterministic order.
test = []
