[package]
name = "disposition_model_common"
description = "SVG diagram generator common data model types."
documentation = "https://docs.rs/disposition_model_common/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[lints]
workspace = true

[dependencies]
id_newtype = { workspace = true, features = ["macros"] }
indexmap = { workspace = true, optional = true }
ordermap = { workspace = true, features = ["serde"] }
schemars = { workspace = true, optional = true, features = ["indexmap2"] }
serde = { workspace = true, features = ["derive"] }

[features]
default = []

# Only enable this when you need to generate the JSON schema.
schemars = ["dep:schemars", "dep:indexmap"]

# Flag so that running tests with `--all-features` still selects `ordermap` for deterministic order.
test = []
