[package]
name = "disposition_taffy_model"
description = "Data types for disposition to work with taffy."
documentation = "https://docs.rs/disposition_taffy_model/"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[dependencies]
cosmic-text = { workspace = true }
disposition_model_common = { workspace = true }
disposition_input_model = { workspace = true }
disposition_ir_model = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
syntect = { workspace = true }
taffy = { workspace = true }
utoipa = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = []

# Only enable this when you need to generate OpenAPI documentation.
openapi = ["dep:utoipa", "disposition_model_common/openapi"]

test = []
