[package]
name = "disposition_json_schema"
description = "Generates the `disposition` JSON schema."
documentation = "https://docs.rs/disposition_json_schema/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
disposition = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
schemars = ["disposition/schemars"]
test = []
