[package]
name = "disposition_openapi_spec"
description = "Generates the `disposition` OpenAPI specification."
documentation = "https://docs.rs/disposition_openapi_spec/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
disposition = { path = "../..", version = "0.0.0", features = ["openapi"] }
